attempt to fix overflow of hero image.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -126,9 +126,9 @@
 #hero-img {
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
     url('/images/hero/hero-mobile.jpg');
+  overflow: hidden;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  max-height: 100vh;
 
   @media (min-width: $bp-small) {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
